--- a/libs/dreambase-types/tsconfig.json
+++ b/libs/dreambase-types/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "es6",
     "outDir": "dist",
-    "rootDir": "src",
-    "module": "CommonJS"
+    "rootDir": "src"
   },
   "include": ["src"]
 }
