--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest": "^24.9.0",
     "lerna": "^3.20.2",
     "mocha": "^5.2.0",
-    "prettier": "1.18.2",
+    "prettier": "^2.0.5",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.7.5",
