--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prettier": "^2.0.5",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.3.0",
-    "typescript": "^3.7.5",
+    "typescript": "^4.0.1-rc",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
