--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "private": true,
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/jest": "^24.0.18",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^12.7.8",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
     "@types/react": "^16.8.8",
     "chai": "^4.2.0",
     "clare": "*",
-    "jest": "^24.9.0",
+    "jest": "^26.4.2",
     "lerna": "^3.20.2",
-    "mocha": "^5.2.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.3.0",
-    "typescript": "^4.0.1-rc",
+    "ts-jest": "^26.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
