--- a/libs/universal-imports/package.json
+++ b/libs/universal-imports/package.json
@@ -7,8 +7,8 @@
   "main": "./index.cjs",
   "module": "./index.mjs",
   "browser": {
-    "./index-node.cjs": "./index-browser.cjs",
-    "./index-node.mjs": "./index-browser.mjs"
+    "./index.cjs": "./index-browser.cjs",
+    "./index.mjs": "./index-browser.mjs"
   },
   "exports": {
     "node": {
