--- a/libs/universal-imports/package.json
+++ b/libs/universal-imports/package.json
@@ -1,23 +1,18 @@
 {
   "name": "universal-imports",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Library of functions and classes that will be backed differently depending on environment.",
   "type": "module",
   "typings": "./index.d.ts",
-  "main": "./index.cjs",
-  "module": "./index.mjs",
-  "browser": {
-    "./index.cjs": "./index-browser.cjs",
-    "./index.mjs": "./index-browser.mjs"
-  },
+  "module": "./index-browser.mjs",
   "exports": {
-    "node": {
-      "import": "./index.mjs",
-      "require": "./index.cjs"
-    },
-    "default": {
-      "import": "./index-browser.mjs",
-      "require": "./index-browser.cjs"
+    ".": {
+      "node": {
+        "module": "./index.mjs",
+        "require": "./index.cjs",
+        "import": "./index.mjs"
+      },
+      "default": "./index-browser.mjs"
     }
   },
   "repository": {
@@ -34,7 +29,6 @@
   },
   "homepage": "https://dreambasejs.com",
   "dependencies": {
-    "@types/node-fetch": "^2.5.7",
     "node-fetch": "^2.6.1"
   }
 }
